<resources>
    <string name="app_name">机选我做主</string>
    <string name="action_settings">Settings</string>
    <string name="action_dlt_history">大乐透历史数据…</string>
    <string name="title_activity_dlt">历史记录</string>
    <string name="title_activity_occurrence_probability">算号器</string>
    <string name="normal_num_area">普通号码区:</string>
    <string name="special_num_area">特殊号码区:</string>
    <string name="introduce">说明…</string>
    <string name="calculate">开始计算…</string>
    <string name="start_random">开始机选</string>
    <string name="calculating">计算中…</string>
    <string name="duplicated_operation">重复操作，请稍候…</string>
    <string name="cancel">取消</string>
    <string name="picking_number">正在选号…</string>
    <string name="number_count_hint">请输入需要生成的号码个数…默认5个</string>
    <string name="calculate_count_hint">请输入需要计算的次数…默认10000次</string>
    <string name="calculate_count_intro">说明：为了增加出号的概率，需要多次计算再从中选出。最小10000，输入数字小于10000或者不输入都会按10000计算. 建议不要太高…手机的性能无法支持快速的计算，超过10万的计算次数会耗时非常的久</string>
    <string name="number_count_intro">一次计算最多生成10个串。输入超过10或者小于1神马的…我都是按10或者1处理哟！</string>
    <string name="dlt">大乐透</string>
    <string name="calculate_result">计算结果</string>
    <string name="title_activity_selection_history">购彩纪录</string>
    <string name="delete">删除</string>
    <string name="add_record">手动添加号码…</string>
    <string name="operation_failed">操作失败.</string>
    <string name="loading">正在加载…</string>
    <string name="load_more">加载更多…</string>
    <string name="no_more">~已经到底了~</string>
    <string name="history_item_text_format">
        开奖日期：%1$s\n开奖号码：%2$s</string>
    <string name="load_failed">加载失败，请检查网络之后重试…</string>
    <string name="view_selection">查看选号中奖纪录…</string>
    <string name="save_calculate_result">保存计算结果</string>
    <string name="view_selection_hint">已保存，请到“选号中奖纪录”中查看。</string>
    <string name="view_it">查看</string>
    <string name="reward_hint_format">恭喜中奖！中奖金额%s元！！</string>
    <string name="deleting">正在删除…</string>
    <string name="title_activity_manual_selection">手选</string>
    <string name="adding">添加中…</string>
    <string name="confirm">确认</string>
    <string name="title_activity_selections">本期选号</string>
    <string name="view_not_redeemed">查看本期选号…</string>
    <string name="action_ssq_history">双色球历史数据…</string>
    <string name="ssq">双色球</string>
    <string name="select_calculator_set">选择算号器类型</string>
    <string name="title_activity_test">数据测试</string>
    <string name="test_count_hint">请输入测试次数，默认10000次</string>
    <string name="test_count_intro">说明：在当前界面进行的测试，会根据截止到此时最后一期之前的所有历史数据进行计算，之后跟本期的开奖结果做比较，确认算法的中奖率。</string>
    <string name="test_last_probability">测试上期中奖概率…</string>
    <string name="test_failed">测试失败...</string>
    <string name="test_detail_title">详细结果：</string>
    <string name="pager_indicator_format">第%1$s页/共%2$s页</string>
</resources>
