<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.OccurrenceProbabilityActivity"
    tools:showIn="@layout/activity_occurrence_probability">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/main_margin"
            android:paddingLeft="@dimen/main_margin"
            android:paddingRight="@dimen/main_margin"
            android:paddingTop="@dimen/main_margin"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pick_number_count"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"
                android:hint="@string/number_count_hint"
                />
            <TextView
                android:paddingTop="@dimen/main_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_count_intro"/>


            <EditText
                android:paddingTop="@dimen/main_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calculate_count"
                android:inputType="number"
                android:singleLine="true"
                android:hint="@string/calculate_count_hint"
                />

            <TextView
                android:paddingTop="@dimen/main_margin"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_count_intro"/>

            <TextView
                android:layout_marginTop="@dimen/main_margin"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                style="@style/AppButtonStyle"
                android:text="@string/calculate"
                android:onClick="handleCalculateClicked"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/main_margin"
                style="@style/AppButtonStyle"
                android:text="@string/view_selection"
                android:onClick="handleViewSelectionClicked"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
