<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.TestActivity"
    tools:showIn="@layout/activity_test">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/main_margin"
        >

        <TextView
            android:id="@+id/test_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:gravity="left"
            android:text="@string/test_count_intro"
            />


        <EditText
            android:id="@+id/test_count"
            style="@style/AppPrimaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/test_count_hint"
            android:inputType="numberSigned"
            android:textColorHint="@color/colorGrey"
            />

        <TextView
            style="@style/AppButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fitsSystemWindows="true"
            android:onClick="handleCalculateCLicked"
            android:text="@string/calculate"
            />
    </LinearLayout>

    <TextView
        android:paddingLeft="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_detail_title"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/result_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/main_margin"
        />
</LinearLayout>