<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context=".activities.OccurrenceProbabilityActivity"
              android:padding="@dimen/activity_vertical_margin">

    <Button
        style="@style/AppButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/introduce"
        android:onClick="handleIntroduceClicked"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/calculators"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:cacheColorHint="@android:color/transparent"/>

    <Button
        style="@style/AppButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/calculate"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="handleCalculateClicked"
        />

    <Button
        style="@style/AppButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:onClick="handleCalculateNumberClicked"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/start_random"/>

</LinearLayout>