<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qqdd.lottery.activities.ManualSelectionActivity"
    tools:showIn="@layout/activity_manual_selection">

    <ScrollView
        android:clipToPadding="false"
        android:scrollbars="none"
        android:padding="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/confirm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal_num_area" />

            <com.qqdd.lottery.ui.view.MatchHeightGridView
                android:id="@+id/normal_num_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:gravity="center"
                android:listSelector="@android:color/transparent"
                android:numColumns="8"
                android:stretchMode="columnWidth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:text="@string/special_num_area" />

            <com.qqdd.lottery.ui.view.MatchHeightGridView
                android:id="@+id/special_num_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:gravity="center"
                android:listSelector="@android:color/transparent"
                android:numColumns="8"
                android:stretchMode="columnWidth" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/confirm"
        style="@style/AppPrimaryTextStyle"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/red_bg"
        android:text="@string/confirm" />

</RelativeLayout>
